# march-madness-auction

./: .env  .gitignore  .pre-commit-config.yaml  README.md  dev_start.sh  docker-compose.yaml  requirements-dev.txt
.github/workflows/: publish-image.yml  publish-images.yml
backend/: main.py  pyproject.toml  requirements-dev.txt  requirements.txt  start_backend_server.sh
backend/app/: __init__.py  api.py  bid.py  bracket.py  game_tracker.py
backend/app/models/: database.py
backend/app/types/: types.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
frontend/: package-lock.json  package.json  start_frontend_server.sh
frontend/public/: index.html
frontend/src/: App.css  App.tsx  Bid.tsx  Bracket.tsx  GamePage.tsx  HomePage.tsx  LobbyPage.tsx  Utils.tsx  ViewPage.tsx  bid.tsx  fonts.css  index.tsx
frontend/src/css/: App.css  Fonts.css
