[tool.poetry]
name = "app"
version = "1.0.0"
description = "Python Backend"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.100.0"
uvicorn = "^0.23.0" 
requests = "^2.31.0"
pydantic = "^2.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"